--- a/css/btn.scss
+++ b/css/btn.scss
@@ -17,6 +17,8 @@ $delayStep: .115s;
 	min-height: 3.3em;
 	position: relative;
 	text-transform: lowercase;
+    margin-right: 1.5em;
+    margin-left: 1.5em;
 
 	&--yellow {
 		--hue: 46;
